# slurm-monitor

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  start-slurm-monitor.sh  tox.ini
.github/: dependabot.yaml
.github/workflows/: build-binaries.yaml  container.yaml  gh-pages.yml  test.yaml
docker/: Dockerfile  prepare-docker.sh  prepare-slurm-monitor.sh
docs/: _config.yml  _toc.yml  cli.rst  modules.rst
docs/examples/: .gitignore
src/slurm_monitor/: .pre-commit-config.yaml  __init__.py  app_settings.py  autodeploy.py  base.py  config.py  db_operations.py  main.py  slurm.py  utils.py  v1.py  v2.py  version.py
src/slurm_monitor/api/v1/: monitor.py  router.py
src/slurm_monitor/api/v2/: cluster.py  jobs.py  monitor.py  nodes.py  response_models.py  router.py  routes.py  user.py
src/slurm_monitor/cli/: autodeploy.py  base.py  data_import.py  db.py  listen.py  main.py  probe.py  query.py  restapi.py  run.py  spec.py  system_info.py  test.py
src/slurm_monitor/db/: __init__.py  data_collector.py  db.py  db_tables.py  migrate.py  settings.py
src/slurm_monitor/db/timescaledb/: __init__.py  dialect.py  functions.py
src/slurm_monitor/db/v0/: __init__.py  data_collector.py  db.py  db_tables.py
src/slurm_monitor/db/v1/: __init__.py  data_collector.py  data_command_publisher.py  data_publisher.py  data_subscriber.py  data_subscriber_test.py  db.py  db_tables.py  query.py
src/slurm_monitor/db/v2/: data_subscriber.py  db.py  db_base.py  db_subscriber.py  db_tables.py  db_testing.py  importer.py  message_subscriber.py  postgresql.conf  queries.py  query.py  sonar.py  validation.py
src/slurm_monitor/devices/: __init__.py  amd.py  gpu.py  habana.py  nvidia.py  xpu.py
src/slurm_monitor/resources/: gpu-datasheets.yaml  sonar-latest
src/slurm_monitor/timescaledb/: __init__.py  dialect.py  functions.py
src/slurm_monitor/utils/: __init__.py  api.py  cache.py  command.py  docker.py  process.py  slurm.py  stats_types.py  system_info.py
tests/: run-timescaledb.sh
tests/data/db/v2/: fox-ps.json  fox-slurm.json  fox-sysinfo.json  ml1-ps.json  ml1-sysinfo.json
tests/data/db/v2/ex3/: ex3-g001-ps.0.json  ex3-g001-ps.1.json  ex3-g001-ps.3.json  ex3-g001-slurm.json  ex3-g001-sysinfo.json  ex3-g002-ps.0.json  ex3-g002-ps.1.json  ex3-g002-ps.2.json  ex3-g002-slurm.json  ex3-g002-sysinfo.json
tests/data/ssl/: cert.pem  key.pem
tests/mock/: scontrol  slurmrestd  slurmrestd.response.nodes
tests/slurm_monitor/: conftest.py  dot-env-sample  test_autodeploy.py
tests/slurm_monitor/api/v1/: test_monitor.py
tests/slurm_monitor/api/v2/: test_monitor_v2.py
tests/slurm_monitor/cli/: test_cli.py
tests/slurm_monitor/data/sonar/: 0+cluster.ex3.simula.no.json  0+job-srl-login3.ex3.simula.no.json  0+job-with-unknown-partition.ex3.simula.no.json  0+sample-g001.ex3.simula.no.json  0+sample-g002.ex3.simula.no.json  0+sample-ml1.hpc.uio.no.json  0+sample-ml2.hpc.uio.no.json  0+sample-ml3.hpc.uio.no.json  0+sample-node-X.cluster-0.json  0+sysinfo-g001.ex3.simula.no.json  0+sysinfo-ml1.hpc.uio.no.json  0+sysinfo-ml2.hpc.uio.no.json  0+sysinfo-ml3.hpc.uio.no.json  2+cluster.ex3.simula.no.json  3+sample.fox.educloud.no.json  4+cluster.fox.educloud.no.json
tests/slurm_monitor/db/: test_data_collector.py  test_data_publisher.py  test_data_subscriber.py  test_db.py  test_db_tables.py  test_query.py
tests/slurm_monitor/db/v1/: test_data_collector.py  test_data_publisher.py  test_data_subscriber.py  test_db.py  test_db_async.py  test_db_tables.py  test_query.py
tests/slurm_monitor/db/v2/: conftest.py  test_data_subscriber_v2.py  test_db.py  test_db_subscriber_v2.py  test_db_v2.py  test_importer.py  test_message_subscriber.py  test_sonar.py
tests/slurm_monitor/devices/: test_gpu.py  test_gpu_info.py
tests/slurm_monitor/utils/: test_command.py  test_process.py  test_slurm.py  test_system_info.py
