[build-system]
requires = ["setuptools >= 61.0.0",
    "build",
    "sphinx"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "slurm-monitor"
dynamic = ["version"]
description = "Slurm monitor contains a 'probe' implementation to publish monitoring data from nodes, a collector to make monitor data persistent in a database, and a REST API component to make the data accessible"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["slurm", "monitor"]
authors = [
    { name = "Thomas Roehr", email = "roehr@simula.no" }
]
requires-python = ">=3.10"

maintainers = [
    { name = "Thomas Roehr", email = "roehr@simula.no" }
]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Lanugage :: Python :: 3.10",
    "Programming Lanugage :: Python :: 3.11",
    "Programming Lanugage :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
]

dependencies = [
    "asyncpg",
    "aiosqlite",
    "cachetools",
    "fastparquet",
    "fastapi[standard]",
    "fastapi-cache2[memcache]",
    "fastapi_utils",
    "greenlet",
    "kafka-python>=2.2.15",
    "numpy",
    "pandas",
    "prometheus-fastapi-instrumentator",
    "psutil",
    "pyarrow",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "psycopg2-binary",
    "python-snappy",
    "sqlalchemy",
    "sqlalchemy-schemadisplay",
    "tqdm",
    "typing_inspect",
    "uvicorn"
]

[project.urls]
homepage = "https://github.com/2maz/slurm-monitor"
documentation = "https://2maz.github.io/slurm-monitor"
repository = "https://github.com/2maz/slurm-monitor"

#[project.entry-points]

[project.optional-dependencies]

vendorlibs = [
    "nvidia-ml-py",
    "pyrsmi"
]

dev = [
    "alembic",
    "isort",
    "jupyter-book<2",
    "pre-commit",
    "ruff",
    "sphinx-autoapi",
    "tox"
]

test = [
    "coverage",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "pytest-console-scripts",
    "pytest-cov",
    "pytest-mock",
    "pydot",
    "tox"
]


[project.scripts]
slurm-monitor = "slurm_monitor.cli.main:run"

slurm-monitor-collector = "slurm_monitor.db.v0.data_collector:cli_run"
slurm-monitor-migrate = "slurm_monitor.db.migrate:cli_run"

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools]
    script-files = [
        "bin/slurm-monitor-probes-ctl",
        "bin/slurm-monitor-ctl"
    ]

[tool.setuptools.package-data]
"slurm_monitor" = [ "resources/**/*" ]

[tool.setuptools.dynamic]
version = { attr = "slurm_monitor.__version__" }

[tool.coverage.run]
source = ["src"]

[tool.ruff]
line-length = 120

[tool.isort]
multi_line_output = 8

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint.per-file-ignores]
"conftest.py" = ["E501"]
"test_gpu.py" = ["E501"]
